...
    <string name="orphan_brushings_delete_title">"Are you sure?"</string>
    <string name="orphan_brushings_delete_message">"Do you really want to delete these brushings? This action is irreversible."</string>
    <string name="um_no">"No"</string>
    <string name="um_yes">"Yes"</string>
    <string name="last_brushing_card_brushing_description">"%s %s at %s"</string>
...
    <string name="pairing_something_went_wrong">"Something went wrong. Please try again later."</string>
    <string name="pairing_enable_bluetooth">"Please enable Bluetooth"</string>
    <string name="pairing_grant_location_permission_title">"Location permission"</string>
    <string name="pairing_grant_location_permission_description">"Android requires Location permission to connect any Bluetooth Low Energy device. Please enable it in the following dialog to connect your toothbrush."</string>
    <string name="pairing_grant_location_permission_action">"Grant permission"</string>
    <string name="pairing_enable_location_title">"Activate location"</string>
    <string name="pairing_enable_location_description">"Android requires activated Location to connect any Bluetooth Low Energy device. Please turn it on in the following dialog to connect your toothbrush."</string>
    <string name="pairing_enable_location_action">"Activate location"</string>
    <string name="pairing_grant_location_permission_error">"Please grant Location permission"</string>
    <string name="pairing_enable_location">"Please enable Location"</string>
...

smile points expire December 31 of the following year or when you deactivate or otherwise cancel your account.*<br/>]]></string>
    <string name="pairing_wake_your_brush_title">"Wake up your toothbrush"</string>
    <string name="pairing_wake_your_brush_title_highlight">" "</string>
    <string name="challenge_feedback_collect_smiles">"Collect my smiles"</string>
    <string name="onboarding_get_ready_subtitle">"The toothbrush that knows you,\nthe app that shows you."</string>
    <string name="onboarding_get_ready_sign_in_button">"Sign in"</string>
    <string name="onboarding_get_ready_no_brush_button">"I don't have a brush"</string>
    <string name="onboarding_get_ready_connect_brush_button">"CONNECT MY BRUSH"</string>

    <!-- Fuzzy -->
...
    <!-- Fuzzy -->
    <string name="onboarding_sign_up_email_button">"Sign up with email"</string>
    <string name="pairing_wake_your_brush_subtitle">"Press the power button or shake your toothbrush if it's already on."</string>
    <string name="pairing_wake_your_brush_nothing_happening">"Is nothing happening?"</string>

...
    <string name="change_avatar_take_picture">"Take picture"</string>
    <string name="change_avatar_choose_from_gallery">"Select picture"</string>
    <string name="pairing_brush_found_title">"We found a brush!\nIs it yours?"</string>
    <string name="pairing_brush_found_subtitle">"Do you see the blue light blinking on your brush?"</string>
    <string name="pairing_brush_found_connect">"Yes, connect"</string>
    <string name="onboarding_check_email_header">"Check your email"</string>
    <string name="onboarding_check_email_subtitle">"No need to remember a long or hard to type password"</string>
...
don’t let the world change your smile!"</string>
    <string name="profile_settings_button">"profile settings"</string>
    <string name="pairing_is_brush_ready_title">"Is your brush ready?"</string>
    <string name="pairing_is_brush_ready_subtitle">"Your brush needs to charge for 24 hours prior to using it for the first time."</string>
    <string name="pairing_is_brush_ready_connect">"yes, connect my brush"</string>
    <string name="pairing_is_brush_ready_help">"need more help"</string>
    <string name="onboarding_login_title">"Sign in"</string>
    <string name="onboarding_login_subtitle">"What's your email?"</string>
...
    <string name="onboarding_login_or_divider">"OR"</string>
    <string name="onboarding_login_email_button">"Sign in with email"</string>
    <string name="pairing_model_mismatch_title">"Not a Colgate Connect brush"</string>
    <string name="pairing_model_mismatch_subtitle">"We detected the hum toothbrush.\nTo optimize your brushing experience we recommend you switch to the hum app."</string>
    <string name="pairing_model_mismatch_switch_app">"Switch to HUM App"</string>
    <string name="pairing_model_mismatch_continue_anyway">"Continue anyway"</string>
    <string name="pairing_scan_toothbrush_title">"Connect your toothbrush"</string>
    <string name="pairing_scan_toothbrush_description">"Searching for nearby toothbrushes"</string>
    <string name="earning_points_title">"earning smile points"</string>
    <string name="earning_points_detail_title">"HOW TO EARN &amp; REDEEM"</string>
...
    <string name="checkup_clean">"Clean"</string>
    <string name="checkup_missed">"Missed"</string>
    <string name="pairing_no_brush_dialog_title">"you don’t see your toothbrush?"</string>
    <string name="pairing_no_brush_dialog_content1">"If your toothbrush is near but doesn’t appear here, it may be because:"</string>
    <string name="pairing_no_brush_dialog_content2">"•    it’s in standby mode"</string>
    <string name="pairing_no_brush_dialog_content3">"•    has a low battery level"</string>
    <string name="pairing_no_brush_dialog_content4">"•    it’s already connected to another device"</string>
    <string name="pairing_no_brush_dialog_content5">"Turn it on, deactivate the bluetooth or forget the toothbrush on the other device."</string>
    <string name="pairing_no_brush_dialog_content6">"You should now see your toothbrush in the list!"</string>
    <string name="pairing_no_brush_dialog_get_it">"I get it!"</string>
    <string name="about_screen_description">"The best smiles are more than a look, they're a feeling. And we believe that brushing your teeth should make you feel great. That's why we created hum; a brush that's all about making it easier to brush better."</string>
    <string name="settings_about_screen_description">"We're elevating oral care and using connected technology to stop cavities, decay and oral diseases!"</string>
    <string name="pairing_enable_bluetooth_title">"Bluetooth"</string>
    <string name="pairing_enable_bluetooth_description">"To connect your toothbrush, please activate Bluetooth on your device"</string>
    <string name="pairing_enable_bluetooth_button_text">"activate bluetooth"</string>
    <string name="onboarding_sign_up_google_button">"Sign up with Google"</string>
    <string name="push_notification_channel_night_watch">"Offline Brushings"</string>
...
