...

<layout>

  <data>

    <variable
      name="viewModel"
      type="com.kolibree.android.app.ui.pairing.location.LocationViewModel" />

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
...
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHeight_percent="0.85"
      app:layout_constraintStart_toStartOf="parent" />

    <TextView
      android:id="@+id/location_title"
      android:layout_width="@dimen/match_constraints"
      android:layout_height="wrap_content"
      android:text="@{viewModel.title}"
      android:textAppearance="?textAppearanceHeadline2"
      app:layout_constraintEnd_toEndOf="@id/content"
      app:layout_constraintStart_toStartOf="@id/content"
      app:layout_constraintTop_toTopOf="@id/content"
      tools:text="@string/pairing_grant_location_permission_title" />

    <TextView
      android:id="@+id/location_description"
      android:layout_width="@dimen/match_constraints"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dot_double"
      android:text="@{viewModel.description}"
      android:textAppearance="?textAppearanceSubtitle1"
      app:layout_constraintEnd_toEndOf="@id/content"
...
    <ImageView
      android:id="@+id/location_logo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:alpha="0"
      android:src="@{viewModel.icon}"
      app:layout_constraintBottom_toTopOf="@id/location_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/location_description"
      tools:alpha="1"
      tools:src="@drawable/ic_location" />

...
