...
      android:textAppearance="?textAppearanceSubtitle1"
      app:layout_constraintEnd_toEndOf="@id/content"
      app:layout_constraintStart_toStartOf="@id/content"
      app:layout_constraintTop_toBottomOf="@id/header" />

    <ImageView
      android:id="@+id/switch_app_image"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/dot_trip"
      app:srcCompat="@drawable/ic_switch_app"
      app:layout_constrainedHeight="true"
      app:layout_constraintBottom_toTopOf="@id/change_app_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/subtitle" />

    <Button
      android:id="@+id/change_app_button"
...
      android:layout_width="@dimen/match_constraints"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/dot"
      android:alpha="0"
      android:text="@string/pairing_model_mismatch_switch_app"
      android:onClick="@{v -> viewModel.changeApp()}"
      app:layout_constraintBottom_toTopOf="@id/continue_anyway_button"
      app:layout_constraintEnd_toEndOf="@id/content"
      app:layout_constraintStart_toStartOf="@id/content"
      tools:alpha="1" />

    <Button
      android:id="@+id/continue_anyway_button"
...
