...
      android:textAppearance="?textAppearanceSubtitle1"
      app:layout_constraintEnd_toEndOf="@id/content"
      app:layout_constraintStart_toStartOf="@id/content"
      app:layout_constraintTop_toBottomOf="@id/header" />

    <Button
      android:id="@+id/connect_my_brush_button"
      style="?materialButtonStyle"
      android:layout_width="@dimen/match_constraints"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/dot"
      android:alpha="0"
      android:text="@string/pairing_is_brush_ready_connect"
      android:onClick="@{v -> viewModel.connectMyBrushClick()}"
      app:layout_constraintBottom_toTopOf="@id/need_help_button"
      app:layout_constraintEnd_toEndOf="@id/content"
      app:layout_constraintStart_toStartOf="@id/content"
      tools:alpha="1" />

    <Button
      android:id="@+id/need_help_button"
...
